--- a/app/views/reports/_tv_cycle_time.html.erb
+++ b/app/views/reports/_tv_cycle_time.html.erb
@@ -64,7 +64,7 @@
     xAxis_font_size: "20px",
     /*y轴字体和颜色设置*/
     yAxis_color: "white",
-    yAxis_font_size: "0",
+    yAxis_font_size: "20px",
     /*y轴 标题 字体 和 颜色 设置*/
 //    yAxis_title: "Value(s)",
     yAxis_title: "",
