--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,7 +1,4 @@
 <div class="header" id="daily-ftq-header">
-  <!--<p>Export to:</p>
-  <a class="btn btn-success btn_excel" onclick="export_bt_report_chart_excel()">Excel</a>-->
-
   <div class="col-sm-12" id="current-status-header" style="background: #fefefe;border-bottom: 4px solid #000">
     <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
       <label>Condition</label>
@@ -30,15 +27,9 @@
 
 <div class="clearfix chart-interval-alternate" id="chart-interval-alternate">
   <ul class="pull-right control-chart-interval-group">
-    <!--  <li interval="90">
-       <a>Hr</a>
-     </li> -->
     <li interval="100" style="color: black;">
       <a>D</a>
     </li>
-    <!-- <li interval="200">
-      <a>W</a>
-    </li> -->
     <li interval="300">
       <a>M</a>
     </li>
@@ -49,13 +40,13 @@
       <a>Y</a>
     </li>
   </ul>
-  <!-- <a class="pull-right btn btn-warning linear compare-current-btn">WorkingTime</a> -->
 </div>
 
 <!--chart-->
 <div id="charts_containers" style="margin-top: 60px;min-height:300px;"></div>
 
 <hr style="border-bottom: 4px solid #000;">
+
 <!--table-->
 <div id="data_chartcontainer" class="data_container" style="margin-top: 20px;">
   <table class="table table-bordered table-hover">
@@ -82,282 +73,15 @@
 </style>
 
 <% content_for :javascript_includes do %>
-    <%= javascript_include_tag "reports/daily_ftq_beko" %>
+    <%= javascript_include_tag "reports/daily_ftq" %>
 <% end %>
 
-<script>
-  var IsLoading = false;
-  $(document).ready(function () {
-    var ReportMenuStatus = document.getElementById('report-menu').style.display;
-    $('.control-chart-interval-group li').each(function (index) {
-      $(this).click(function () {
-        $('.control-chart-interval-group li').css({color: 'black', opacity: '0.3'});
-        $('.control-chart-interval-group li').attr('datatype', 'false');
-
-        if (ReportMenuStatus == 'none') {
-          show_loading(70, 0, 0, 0);
-        } else {
-          show_loading(70, 0, 0, 230);
-        }
-
-        $(this).css({opacity: '1'});
-        $(this).attr('datatype', 'true');
-
-        var Choose_Interval_Code = $(this).attr('interval');
-        var ProductLine = $('#vehicle-select').val();
-        $.ajax({
-          url: '/departments/entity_groups',
-          type: 'get',
-          data: {
-            interval: Choose_Interval_Code,
-            product_line: ProductLine
-          },
-          success: function (data) {
-            //Here can do something
-            remove_loading();
-          },
-          error: function () {
-            console.log("Error");
-          }
-        });
-      });
-    });
-
-//        Report.init("daily_ftq");
-    var ClientHeight = $(document).height();
-    var ClientWidth = document.documentElement.clientWidth;
-
-    $('#report-content').css({
-      height: (ClientHeight - 70) + 'px',
-      overflow: 'auto'
-    });
-
-    if (ReportMenuStatus == 'none') {
-      $('#data_chartcontainer').css({width: (ClientWidth - 20) + 'px', overflowX: 'auto'});
-    } else {
-      $('#data_chartcontainer').css({width: (ClientWidth - 230) + 'px', overflowX: 'auto'});
-    }
-
-    if (localStorage.box_msg) {
-      var box_msg = localStorage.box_msg;
-      var productLine = box_msg.split('_')[1];
-      var datatype = box_msg.split('_')[3];
-
-      $('#vehicle-select option').each(function () {
-        if (($(this).attr('value')) == productLine) {
-          $(this).attr('selected', 'true');
-        }
-      });
-
-      loadChartData(productLine, datatype);
-    } else {
-      var productLine = $('#vehicle-select').val();
-      var datatype = 100;
-      loadChartData(productLine, datatype);
-    }
-  });
+<script type="text/javascript" charset="utf-8">
+  daily_ftq.init();
 
   $("#vehicle-select").change(function () {
     var productLine = $('#vehicle-select').val();
     localStorage.box_msg = "Line_" + productLine + "_interval_100" + "_box_0";
     loadChartData(productLine, 100);
   });
-
-  try {
-    window.clearInterval(loadDataIntervalValue);
-  } catch (e) {
-    console.log(e);
-  }
-
-  /*时间刷新*/
-  window.setInterval(function () {
-    startTime();
-  }, 500);
-
-  /*20s 刷新太快*/
-  //    var loadChartDataIntervalValue = window.setInterval("loadChartData()", 20000);
-
-
-  var IntervalProductLine = $('#vehicle-select').val();
-  var IntervalDataType;
-
-  $('.control-chart-interval-group li').each(function () {
-    if ($(this).datatype == "true") {
-      IntervalDataType = $(this).attr('interval');
-    } else {
-      IntervalDataType = 100;
-    }
-  });
-
-  if (!IsLoading) {
-    var loadChartDataIntervalValue = window.setInterval("loadChartData(IntervalProductLine, IntervalDataType)", 120000);
-  }
-
-  function loadChartData(productLine, chartdatatype) {
-    /*清空*/
-    $('#charts_containers').children().remove();
-    $('.thead-tr').children().remove();
-    $('.tbody-target-max').children().remove();
-    $('.tbody-target-min').children().remove();
-    $('.tbody-value').children().remove();
-
-
-    $('.control-chart-interval-group li').each(function (index) {
-      if ($(this).attr('datatype') == 'true') {
-        chartdatatype = $(this).attr('interval');
-      }
-    });
-    /*ajax request*/
-    GetDataFun(productLine, chartdatatype);
-  }
-
-
-  function GetDataFun(productLine, chartdatatype) {
-    IsLoading = true;
-    var ReportMenuStatus = document.getElementById('report-menu').style.display;
-    if (ReportMenuStatus == 'none') {
-      show_loading(70, 0, 0, 0);
-    } else {
-      show_loading(70, 0, 0, 230);
-    }
-    $.ajax({
-      url: '/departments/entity_groups',
-      type: 'get',
-      data: {product_line: productLine, interval: chartdatatype},
-      // async: false,
-      success: function (data) {
-
-        var ajaxData = data;
-
-        var yAxis_value = new Array();
-        var charts_value = new Array();
-        var charts_target_max = new Array();
-        var charts_target_min = new Array();
-
-        $('<th>Station</th>').appendTo('.thead-tr').ready(function () {
-        });
-
-        $('<td>TargetMax</td>').appendTo('.tbody-target-max').ready(function () {
-        });
-
-//        $('<td>TargetMin</td>').appendTo('.tbody-target-min').ready(function () {
-//        });
-
-        $('<td>Value</td>').appendTo('.tbody-value').ready(function () {
-        });
-
-        /*table*/
-        for (var i = 0; i < ajaxData.length; i++) {
-          $('<th>' + ajaxData[i].name + '</th>').appendTo('.thead-tr').ready(function () {
-          });
-
-          $('<td>' + ajaxData[i].target_max + '</td>').appendTo('.tbody-target-max').ready(function () {
-          });
-//
-//            $('<td>' + ajaxData[i].target_min + '</td>').appendTo('.tbody-target-min').ready(function () {
-//            });
-
-          yAxis_value.push(ajaxData[i].name + "#" + ajaxData[i].code + "#" + ajaxData[i].count);
-          charts_target_max.push(ajaxData[i].target_max);
-
-          if (ajaxData[i].value > ajaxData[i].target_max) {
-            charts_value.push({id: ajaxData[i].id, color: '#ff0000', y: ajaxData[i].value});
-            $('<td style="background:#ff0000;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
-            });
-          } else if (ajaxData[i].value < ajaxData[i].target_min) {
-            charts_value.push({id: ajaxData[i].id, color: 'limegreen', y: ajaxData[i].value});
-            /* here can remove background. #FFB90F is orange.*/
-            $('<td style="background:#FFB90F;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
-            });
-          } else {
-            charts_value.push({id: ajaxData[i].id, color: 'limegreen', y: ajaxData[i].value});
-            $('<td style="background:limegreen;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
-            });
-          }
-        }
-        var max_count = 25;
-        if (ajaxData.length < max_count) {
-          max_count = ajaxData.length;
-        }
-
-        /*chart*/
-        var chart = $('#charts_containers').highcharts({
-          title: {
-            text: 'CycleTime', x: -20 //center
-          },
-          credits: {
-            enabled: false
-          },
-          colors: ['#8DB6CD', '#FFA500', '#CD8162', '#24CBE5', '#64E572', '#FF9655',
-            '#FFF263', '#6AF9C4'],
-          xAxis: {
-            categories: yAxis_value,
-            labels: {
-              formatter: function () {
-                return this.value.split('#')[1];
-              }
-            }
-          },
-          yAxis: {
-            title: {text: 'Time(s)'},
-            plotLines: [{value: 0, width: 1, color: '#808080'}]
-          },
-          tooltip: {
-            valueSuffix: 's',
-            formatter: function () {
-              return '<span><b>' + this.x.split('#')[0] +
-                  '</b><br/><b>CycleTime:</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><span>';
-            }
-          },
-//            legend: {layout: 'vertical', align: 'right', verticalAlign: 'middle', borderWidth: 0},
-          legend: {layout: 'horizontal', align: 'center', verticalAlign: 'bottom', borderHeight: 0},
-          plotOptions: {
-            column: {
-              dataLabels: {
-                enabled: true
-              },
-              events: {//监听点的鼠标事件
-                click: function (e) {
-                  var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
-                  if (window.localStorage) {
-                    localStorage.box_msg = over_id;
-                    localStorage.box_name = e.point.category;
-                    localStorage.pre_url = window.location.host + '/reports#daily_ftq';
-
-                    window.location.href = 'reports#defects';
-                    location.reload();
-                  } else {
-                    alert('This browser does NOT support localStorage,please change browser.');
-                  }
-
-                }
-              }
-            }
-          },
-          series: [
-//                {
-//                    name: 'TargetMin',
-//                    data: charts_target_min
-//                },
-            {
-              type: 'column',
-              name: 'Value',
-              data: charts_value,
-              color: 'limegreen'
-            }, {
-              name: 'TargetMax',
-              data: charts_target_max,
-              color: '#FF7F00'
-            }
-          ]
-        });
-        remove_loading();
-        IsLoading = false;
-      },
-      error: function () {
-        console.log("something error");
-      }
-    });
-    // return GetData;
-  }
 </script>
