--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -3,6 +3,7 @@
     overflow: hidden;
   }
 </style>
+
 <div class="report-menu" id="report-menu" style="display: none;">
   <section class="slide_menu">
     <div class="header">
@@ -68,11 +69,11 @@
     <%= javascript_include_tag "Manage-story.js" %>
     <%= javascript_include_tag "Manage-storyset.js" %>
     <%= javascript_include_tag "jedate.js" %>
+    <%= javascript_include_tag "reports/report" %>
 <% end %>
 
-<script type="text/javascript">
+<script type="text/javascript" charset="utf-8">
   var ClientHeight = document.documentElement.clientHeight;
-
   $('.my_icon').css({
     marginTop: (ClientHeight) / 2 + 'px',
     marginBottom: ((ClientHeight) / 2 - 33) + 'px'
@@ -85,70 +86,4 @@
   $('#pop-crate').click(function () {
     $('#report-menu').fadeToggle(0);
   });
-
-  var loading;
-  function loading_show() {
-    var ReportMenuStatus = document.getElementById('report-menu').style.display;
-    if (ReportMenuStatus == 'none') {
-      loading = new SVGLoader(document.getElementById('preloader'), {speedIn: 100});
-      var top = top = document.getElementById("preloader").getBoundingClientRect().bottom >= 0 ? document.getElementById("current-status-header").getBoundingClientRect().bottom : 0;
-      $(".pageload-overlay svg").css('left', '10px');
-      $(".pageload-overlay svg").css('top', top + 'px');
-      $(".pageload-overlay svg").css('bottom', 0);
-      $(".pageload-overlay svg").css('right', 0);
-      loading.show();
-    } else {
-      loading = new SVGLoader(document.getElementById('preloader'), {speedIn: 100});
-      var top = top = document.getElementById("preloader").getBoundingClientRect().bottom >= 0 ? document.getElementById("current-status-header").getBoundingClientRect().bottom : 0;
-      $(".pageload-overlay svg").css('left', '230px');
-      $(".pageload-overlay svg").css('top', top + 'px');
-      $(".pageload-overlay svg").css('bottom', 0);
-      $(".pageload-overlay svg").css('right', 0);
-      loading.show();
-    }
-  }
-
-  function loading_hide() {
-    $('#preloader').remove();
-    $('<div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none"><path d="M30,30 50,30 50,30 30,30 Z"/></svg></div>').appendTo('body').ready(function () {
-    })
-  }
-
-  function startTime() {
-    var today = new Date();
-    var years = today.getFullYear();
-    var months = today.getMonth();
-    var d = today.getDate();
-    var h = today.getHours();
-    var m = today.getMinutes();
-    var s = today.getSeconds();
-// add a zero in front of numbers<10
-    months = months + 1;
-    months = checkTime(months);
-    d = checkTime(d);
-    m = checkTime(m);
-    s = checkTime(s);
-//      var weekday = new Array(7);
-//      weekday[0] = "星期日";
-//      weekday[1] = "星期一";
-//      weekday[2] = "星期二";
-//      weekday[3] = "星期三";
-//      weekday[4] = "星期四";
-//      weekday[5] = "星期五";
-//      weekday[6] = "星期六";
-//      var w = weekday[today.getDay()];
-    try {
-      document.getElementById('current-clock').innerHTML = years + "-" + months + "-" + d + " " + " " + h + ":" + m + ":" + s;
-    } catch (e) {
-      return;
-    }
-//      t = setTimeout('startTime()', 500)
-  }
-
-  function checkTime(i) {
-    if (i < 10) {
-      i = "0" + i;
-    }
-    return i;
-  }
 </script>
