--- a/app/views/reports/_tv_cycle_time.html.erb
+++ b/app/views/reports/_tv_cycle_time.html.erb
@@ -385,6 +385,10 @@
                 }
             ]
         });
+
+
+      $(id).append("<div class='pull-right'style='position:absolute;right:40px;top:30px;background:transparent;z-index:99999;'>" +
+            "<img src='/assets/beko-logo.png' style='width: 100px;'/></div>");
     }
 
 
